--- a/New/iter.html
+++ b/New/iter.html
@@ -50,8 +50,8 @@
         
 
         // parsing and collecting nodes and edges from the python
-        nodes = new vis.DataSet([{"color": "red", "id": "1", "label": "1", "shape": "circle"}, {"color": "red", "id": "2", "label": "2", "shape": "circle"}, {"color": "red", "id": "3", "label": "3", "shape": "circle"}, {"color": "red", "id": "5", "label": "5", "shape": "circle"}, {"color": "red", "id": "6", "label": "6", "shape": "circle"}, {"color": "red", "id": "7", "label": "7", "shape": "circle"}, {"color": "red", "id": "4", "label": "4", "shape": "circle"}, {"color": "grey", "id": "8", "label": "8", "shape": "circle"}, {"color": "grey", "id": "9", "label": "9", "shape": "circle"}, {"color": "grey", "id": "10", "label": "10", "shape": "circle"}]);
-        edges = new vis.DataSet([{"color": "red", "from": "1", "to": "2"}, {"color": "red", "from": "1", "to": "3"}, {"color": "red", "from": "2", "to": "4"}, {"color": "red", "from": "2", "to": "5"}, {"color": "red", "from": "3", "to": "6"}, {"color": "red", "from": "3", "to": "7"}, {"color": "grey", "from": "6", "to": "8"}, {"color": "grey", "from": "7", "to": "9"}, {"color": "grey", "from": "7", "to": "10"}]);
+        nodes = new vis.DataSet([{"color": "red", "id": "1", "label": "1", "shape": "circle"}, {"color": "red", "id": "2", "label": "2", "shape": "circle"}, {"color": "red", "id": "3", "label": "3", "shape": "circle"}, {"color": "red", "id": "5", "label": "5", "shape": "circle"}, {"color": "red", "id": "6", "label": "6", "shape": "circle"}, {"color": "red", "id": "7", "label": "7", "shape": "circle"}, {"color": "red", "id": "4", "label": "4", "shape": "circle"}, {"color": "grey", "id": "8", "label": "8", "shape": "circle"}]);
+        edges = new vis.DataSet([{"color": "red", "from": "1", "to": "2"}, {"color": "red", "from": "1", "to": "3"}, {"color": "red", "from": "2", "to": "4"}, {"color": "red", "from": "2", "to": "5"}, {"color": "red", "from": "3", "to": "6"}, {"color": "red", "from": "3", "to": "7"}, {"color": "grey", "from": "6", "to": "8"}]);
 
         // adding nodes and edges to the graph
         data = {nodes: nodes, edges: edges};
